# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-08-11  Piotr Ożarowski
	* Add Player extension

2009-08-09  Piotr Ożarowski
	* Version changed to 0.11~svn
	* Initial structure for extensions created
	  + ~/.griffith/lib/extensions can be used for user's extensions
	* Amazon posters feature converted to Griffith extension

---- 0.10 ----

2009-08-03  Piotr Ożarowski
	* Releasing 0.10

2009-07-13  Piotr Ożarowski
	* Version changed to 0.10-rc1+svn
	* Filtering Volumes/Collections by loaned flag fixed

---- 0.10-rc1 ----

2009-07-12  Piotr Ożarowski
	* Loaning collections with lots of movies inside will work faster now
	* AniDB movie plugin updated (thanks to nickpick)
	* Translation files synchronized with Rosetta

2009-07-10  Michael Jahn
	* new export plugins: Ant Movie Catalog, GCstar, DVD Profiler XML Export V2 and V3

2009-07-07  Michael Jahn
	* updated Allocine, CineMovies, IMDb-de, MovieMeter, Zelluloid plugin

2009-07-06  Piotr Ożarowski
	* Reorganize ORM stuff file structure (db module moved to db package)

2009-07-05  Piotr Ożarowski
	* Use SQLAlchemy's PickleType to store search conditions
	  (old rules are removed without warning - beta version privilege ;)
	* Remove ilike from search criteria
	* Update current value of sequence after restoring data from backup in
	  PostgreSQL
	* Loan details and history added to the movie db model

2009-07-04  Piotr Ożarowski
	* Version changed to 0.10-beta3+svn
	* [#305123] If Region 0 (no region data) is selected, save "0" in
	  database otherwise default region will be used
	* Mail content can be translated again (gettext issue fixed)
	* [#269865] Don't change movie plugin selection after adding a movie
	* Rollback all pending operations before creating new database
	* Poster window (if visible) is updated along with current movie change

2009-07-03  Michael Jahn
	* updated IMDb plugin
	* added Ant Movie Catalog import plugin

---- 0.10-beta3 ----
